# nyaastats

./: .gitignore  CLAUDE.md  ETL_CONFIGURATION.md  LICENSE  PIPELINE_DESIGN.md  README.md  design.md  impl.md  main.py  pyproject.toml
nyaastats/: __init__.py  backfill.py  config.py  database.py  etl_main.py  guessit_utils.py  html_scraper.py  main.py  models.py  rss_fetcher.py  scheduler.py  tracker.py
nyaastats/etl/: __init__.py  aggregator.py  anilist_client.py  config.py  exporter.py  fuzzy_matcher.py  jikan_client.py  metrics.py  mock_data.py  movie_aggregator.py  movie_exporter.py  niconico_client.py  seasonal_exporter.py  title_corrections.py
scripts/: anilist_lookup.py  generate_fake_data.py
tests/: __init__.py  conftest.py  test_database.py  test_guessit_utils.py  test_html_scraper.py  test_integration.py  test_rss_fetcher.py  test_scheduler.py  test_tracker.py
tests/etl/: __init__.py  test_jikan_client.py  test_metrics.py  test_movie_exporter.py  test_niconico_client.py  test_season_matching.py  test_title_corrections.py
tests/fixtures/: example.html  example.rss
website/: .gitignore  README.md  observablehq.config.js  package-lock.json  package.json  season-template.md
website/scripts/: generate-treemaps.js
website/src/: about.md  index.md  movies.md  show.md
website/src/components/: rankings.js  watermark.js
website/src/data/: .gitkeep  feed.xml.js  treemaps.zip.js
website/src/season/: [season].md.js  fall-2025.md  season-template.md
website/src/show/: [id].md
